cabal-version:  >= 1.10
name:           shelltestrunner
version:        1.9.0.1
category:       Testing
synopsis:       Easy, repeatable testing of CLI programs/commands

description:
  shelltestrunner (executable: shelltest) is a portable
  command-line tool for testing command-line programs, or general shell
  commands, released under GPLv3+.  It reads simple test specifications
  defining a command to run, some input, and the expected output,
  stderr, and exit status.  It can run tests in parallel, selectively,
  with a timeout, in color, etc.

license:        GPL
license-file:   LICENSE
author:         Simon Michael <simon@joyful.com>
maintainer:     Simon Michael <simon@joyful.com>
homepage:       https://github.com/simonmichael/shelltestrunner
bug-reports:    https://github.com/simonmichael/shelltestrunner/issues
stability:      stable
build-type:     Simple

tested-with:
  GHC == 9.8.0
  GHC == 9.6.2
  GHC == 9.4.5
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2
  GHC == 7.10.3

extra-tmp-files:
extra-source-files:
  README.md
  CHANGES
  ANNOUNCE
  tests/format1/*.test
  tests/format1.unix/*.test
  tests/format1.windows/*.test
  tests/format2/*.test
  tests/format2.unix/*.test
  tests/format2.windows/*.test
  tests/format3/*.test
  tests/format3.unix/*.test
  tests/format3.windows/*.test
  tests/examples/*.test

executable shelltest
  default-language: Haskell2010
  ghc-options: -threaded -W -fwarn-tabs
  main-is: shelltest.hs
  hs-source-dirs: src
  other-modules:
    Import
    Parse
    Preprocessor
    Types
    Utils
    Utils.Debug

  build-depends:
      base                 >= 4     && < 5
    , Diff                 >= 0.2.0
    , filemanip            >= 0.3
    , HUnit
    , cmdargs              >= 0.7
    , directory            >= 1.0
    , filepath             >= 1.0
    , parsec
    , pretty-show          >= 1.6.5
    , process
    , regex-tdfa           >= 1.1
    , safe
    , test-framework       >= 0.3.2
    , test-framework-hunit >= 0.2
    , utf8-string          >= 0.3.5

source-repository head
  type:     git
  location: https://github.com/simonmichael/shelltestrunner
